@@ -13,12 +13,6 @@
     <setting id="RR_PA_TSCHED"     type="bool"   label="30007"   default="true" visible="eq(-2,PulseAudio))" />
     <setting id="RR_AUDIO_VOLUME"  type="slider" label="30008"   default="75"   range="0,5,100" option="percent" visible="eq(-3,PulseAudio))" />
   </category>
-  <category  label="30100">
-    <setting label="30103" type="lsep"/>
-    <setting type="sep" />
-    <setting id="RR_REFRESH_RATE_AMIGA"   type="select" label="30104" values="50Hz|60Hz" default="50Hz"/>
-    <setting id="RR_REFRESH_RATE_ATARI"   type="select" label="30105" values="50Hz|60Hz" default="50Hz"/>
-  </category>
   <category  label="30200">
     <setting label="30201" type="lsep"/>
     <setting type="sep" />
