@@ -3,7 +3,7 @@
 
 PKG_NAME="rr-config-tool"
 PKG_VERSION="1.0"
-PKG_REV="104"
+PKG_REV="105"
 PKG_ARCH="any"
 PKG_LICENSE="GPLv2"
 PKG_DEPENDS_TARGET="toolchain"
